<resources>
    <string name="app_name">csmoviproj</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Maps">maps</string>
    <string name="state">State</string>
    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="deaths">Deaths</string>
    <string name="_1_week">1 Week</string>
    <string name="_1_month">1 Month</string>
    <string name="max">Max</string>
    <string name="covide_tracker">Covide Tracker</string>
    <string name="covid_tracker">covid tracker</string>
</resources>