<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryViewModel"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSelectState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/covid_tracker"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radioGroupMetricSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectState">

        <RadioButton
            android:id="@+id/radioButtonNegative"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:text="@string/negative" />

        <RadioButton
            android:id="@+id/radioButtonPositive"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:text="@string/positive" />

        <RadioButton
            android:id="@+id/radioButtonDeath"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/deaths" />
    </RadioGroup>

    <com.robinhood.spark.SparkView
        android:id="@+id/sparkview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupTimeSelection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupMetricSelection"
        app:layout_constraintVertical_bias="1.0"
        app:spark_lineColor="@color/black"
        app:spark_scrubEnabled="false" />

    <RadioGroup
        android:id="@+id/radioGroupTimeSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorDark"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tvMetricLabel"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioButtonWeek"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="@string/_1_week"
            android:textColor="#6D4C41"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        <RadioButton
            android:id="@+id/radioButtonMonth"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:text="@string/_1_month" />

        <RadioButton
            android:id="@+id/radioButtonMax"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/max"
            android:textColor="#6D4C41"
            tools:ignore="TextContrastCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvDateLabel"
        android:layout_width="182dp"
        android:layout_height="65dp"
        android:layout_marginTop="66dp"
        android:layout_marginBottom="52dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroupTimeSelection"
        tools:text="August 10, 2021" />

    <TextView
        android:id="@+id/tvMetricLabel"
        android:layout_width="215dp"
        android:layout_height="75dp"
        android:layout_marginBottom="44dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvDateLabel"
        tools:text="43,392" />


</androidx.constraintlayout.widget.ConstraintLayout>